add 404.html to see if it fixes linked in preview

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Arthur uses this site to blog about and demonstrate technology concepts.  It is currently deployed using serverless technologies on AWS."
+      content="Blog site using React"
     />
     <meta property="og:title" content="Arthur Dayton Blog" />
     <meta property="og:description" content="Arthur uses this site to blog about and demonstrate technology concepts.  It is currently deployed using serverless technologies on AWS." />
